[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aeuc-context-manager"
version = "0.2.0"
description = "AEUC Sovereign Context Manager — Golden Ratio Token Limiter with Base-144k/1.44M radix support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Constitutional Solutions / Nikola Family", email = "sovereign@constitutionalsolutions.org"}
]
keywords = [
    "llm", "context-window", "token-limiter", "golden-ratio", "fibonacci", 
    "aeuc", "phi", "sovereignty", "audit-chain", "blake2b"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Constitutional-Solutions/aeuc-context-manager"
Repository = "https://github.com/Constitutional-Solutions/aeuc-context-manager"
Issues = "https://github.com/Constitutional-Solutions/aeuc-context-manager/issues"
Documentation = "https://github.com/Constitutional-Solutions/aeuc-context-manager/blob/main/MANUAL.md"

[tool.setuptools]
py-modules = ["aeuc_context_manager"]
